testing to see if git works
uhh this si to see if i can push from my branch then upload to main

--- a/index.html
+++ b/index.html
@@ -1,41 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>LAMP Stack Project</title>
+    <link rel="stylesheet" href="assets/styles.css" />
+  </head>
 
-<head>
-  <meta charset ="UTF-8">
-  <title>LAMP Stack Project</title>
-  <link rel="stylesheet" href="assets/styles.css">
-</head>
+  <body>
+    <header>
+      <h1>LAMP Stack Project</h1>
+    </header>
 
-<body>
+    <main class="container homepage">
+      <section class="card">
+        <h2>Welcome to our LAMP Stack Project!</h2>
+        <p>Our group members are:</p>
+        <ul class="team">
+          <li>Alanys Mercado in Front-end</li>
+          <li>Miraziz Akmalov in API</li>
+          <li>Jaime Sepulveda in API</li>
+          <li>Aidan Leith in Database</li>
+          <li>Sahif Hossain as Project Manager</li>
+        </ul>
 
-<header>
-  <h1> LAMP Stack Project</h1>
-</header>
-
-
-<main class="container homepage">
-  <section class="card">
-  <h2>
-    Welcome to our LAMP Stack Project!
-  </h2>
-  <p> Our group members are: </p>
-  <ul class = "team">
-    <li> Alanys Mercado in Front-end </li>
-    <li> Miraziz Akmalov in API </li>
-    <li> Jaime Sepulveda in API</li>
-    <li> Aidan Leith in Database</li>
-    <li> Md Sahif Hossain as Project Manager</li>
-  </ul>
-
-  <div class ="actions">
-    <a href="register.html"><button>Register</button></a>
-    <a href="login.html"><button>Login</button></a>
-  </div>
-
-  </section>
-</main>
-<footer class="footer">© 2025 Team 16 LAMP</footer>
-</body>
-
+        <div class="actions">
+          <a href="register.html"><button>Register</button></a>
+          <a href="login.html"><button>Login</button></a>
+        </div>
+      </section>
+    </main>
+    <footer class="footer">© 2025 Team 16 LAMP</footer>
+  </body>
 </html>
