--- a/login.html
+++ b/login.html
@@ -1,41 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Login Page</title>
-  <link rel="stylesheet" href="assets/styles.css">
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Login Page</title>
+    <link rel="stylesheet" href="assets/styles.css" />
+  </head>
 
-<body>
+  <body>
+    <h1>Welcome back</h1>
+    <p class="muted">
+      Sign in to your account below. <br />
+      Don’t have an account? <a href="register.html">Sign up here</a>
+    </p>
+    <main class="container">
+      <section class="card">
+        <h2>Sign in to your account</h2>
 
-<h1>Welcome back</h1>
-<p class="muted">
-  Sign in to your account below. <br>
-  Don’t have an account? <a href="register.html">Sign up here</a>
-</p>
-<main class="container">
-  <section class="card">
-    <h2>Sign in to your account</h2>
+        <form method="POST" action="index.php">
+          <div class="field">
+            <label for="username">Username</label>
+            <input type="text" name="username" id="username" required />
+          </div>
 
-    <form method="POST" action="login_api_placeholder.php">
-      <div class="field">
-        <label for="username">Username</label>
-        <input type="text" name="username" id="username" required>
-      </div>
+          <div class="field">
+            <label for="password">Password</label>
+            <input type="password" name="password" id="password" required />
+          </div>
 
-      <div class="field">
-        <label for="password">Password</label>
-        <input type="password" name="password" id="password" required>
-      </div>
+          <div class="actions">
+            <button type="submit" class="btn">Login</button>
+          </div>
+        </form>
+      </section>
+    </main>
 
-      <div class="actions">
-        <button type="submit" class="btn">Login</button>
-      </div>
-    </form>
-  </section>
-</main>
-
-<footer class="footer">© 2025 Team 16 LAMP</footer>
-</body>
+    <footer class="footer">© 2025 Team 16 LAMP</footer>
+  </body>
 </html>
-
