--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
       <section class="card">
         <h2>Create your account</h2>
 
-        <form method="POST" action="index.php">
+        <form method="POST" action="register.php">
           <div class="field">
             <label for="username">Username</label>
             <input id="username" name="username" type="text" required />
