--- a/register.html
+++ b/register.html
@@ -22,7 +22,7 @@
         <form method="POST" action="register.php">
           <div class="field">
             <label for="username">Username</label>
-            <input id="username" name="username" type="text" required />
+            <input id="username" name="login" type="text" required />
           </div>
 
           <div class="field">
