Added fields to register.html

--- a/register.html
+++ b/register.html
@@ -20,6 +20,17 @@
         <h2>Create your account</h2>
 
         <form method="POST" action="register.php">
+
+          <div class="field">
+            <label for="first_name">First Name</label>
+            <input id="first_name" name="first_name" type="text" required />
+          </div>
+
+          <div class="field">
+            <label for="last_name">Last Name</label>
+            <input id="last_name" name="last_name" type="text" required />
+          </div>
+
           <div class="field">
             <label for="username">Username</label>
             <input id="username" name="username" type="text" required />
