Updated path for register.html to point to register.php

--- a/register.html
+++ b/register.html
@@ -19,7 +19,7 @@
       <section class="card">
         <h2>Create your account</h2>
 
-        <form method="POST" action="register.php">
+        <form method="POST" action="api/register.php">
 
           <div class="field">
             <label for="first_name">First Name</label>
