--- a/register.html
+++ b/register.html
@@ -45,6 +45,17 @@
 
             <h2 class="screen-title">Create your account</h2>
             <form method="POST" action="api/register.php" class="auth-form">
+
+              <div class="field">
+                <input id="first_name" name="firstname" type="firstname"
+                       class="glass-input" placeholder="firstname" required>
+              </div>
+
+              <div class="field">
+                <input id="last_name" name="lastname" type="lastname"
+                       class="glass-input" placeholder="lastname" required>
+              </div>
+
               <div class="field">
                 <input id="username" name="username" type="text"
                        class="glass-input" placeholder="Username" required>
