fixing registration (please work)

--- a/register.html
+++ b/register.html
@@ -47,13 +47,13 @@
             <form method="POST" action="api/register.php" class="auth-form">
 
               <div class="field">
-                <input id="first_name" name="firstname" type="firstname"
-                       class="glass-input" placeholder="firstname" required>
+                <input id="first_name" name="first_name" type="text"
+                       class="glass-input" placeholder="First name" required>
               </div>
 
               <div class="field">
-                <input id="last_name" name="lastname" type="lastname"
-                       class="glass-input" placeholder="lastname" required>
+                <input id="last_name" name="last_name" type="text"
+                       class="glass-input" placeholder="Lastname" required>
               </div>
 
               <div class="field">
