--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
     <h1>Welcome back</h1>
     <p class="muted">
       Sign in to your account below. <br />
-      do hvee and account <a href="register.html">Sign up here</a>
+      Already have an account? <a href="register.html">Sign up here</a>
     </p>
     <main class="container">
       <section class="card">
