--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
             <input type="text" name="lastName" id="lastName" placeholder="Enter last name." required />
             <input type="text" name="phoneNumber" id="phoneNumber" placeholder="Enter phone number" required />
             <input type="text" name="email" id="email" placholder="Enter email" required />
-            <button type="submit">Add</button>
+            <a href="profile.html"><button>Add</button></a>
           </div>
     </form>
 </body>
