--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Login Page</title>
     <link rel="stylesheet" href="assets/styles.css" />
+    <script type="text/javascript" src="js/main.js"></script>
   </head>
 
   <body>
@@ -16,7 +17,7 @@
       <section class="card">
         <h2>Sign in to your account</h2>
 
-        <form method="POST" action="api/login.php">
+        <form onSubmit="login(); return false;">
           <div class="field">
             <label for="username">Username</label>
             <input type="text" name="username" id="username" required />
