--- a/profile.html
+++ b/profile.html
@@ -7,15 +7,13 @@
     <link rel="stylesheet" href="assets/styles.css" />
 </head>
 <body>
-    <form method="POST" action="api/addContact.php">
-          <div class="field">
-            <label for="addContact">Add Contact</label>
-            <input type="text" name="firstName" id="firstName" placeholder="Enter first name." required/>
-            <input type="text" name="lastName" id="lastName" placeholder="Enter last name." required />
-            <input type="text" name="phoneNumber" id="phoneNumber" placeholder="Enter phone number" required />
-            <input type="text" name="email" id="email" placholder="Enter email" required />
-            <a href="profile.html"><button>Add</button></a>
-          </div>
-    </form>
+    <div class="field">
+      <label for="addContact">Add Contact</label>
+      <input type="text" name="firstName" id="firstName" placeholder="Enter first name." required/>
+      <input type="text" name="lastName" id="lastName" placeholder="Enter last name." required />
+      <input type="text" name="phoneNumber" id="phoneNumber" placeholder="Enter phone number" required />
+      <input type="text" name="email" id="email" placholder="Enter email" required />
+      <button type="submit">Add</button>
+    </div>
 </body>
 </html>
