--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
       <section class="card">
         <h2>Sign in to your account</h2>
 
-        <form onSubmit="login(); return false;">
+        <form onsubmit="login(); return false;">
           <div class="field">
             <label for="username">Username</label>
             <input type="text" name="username" id="username" required />
