Implemented add functionality.

--- a/profile.html
+++ b/profile.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <div class="field">
-      <label for="addContact">Add Contact</label>
+      <h2>Add a color by entering the fields below.</h2>
       <input type="text" name="firstName" id="firstName" placeholder="Enter first name." required/>
       <input type="text" name="lastName" id="lastName" placeholder="Enter last name." required />
       <input type="text" name="phoneNumber" id="phoneNumber" placeholder="Enter phone number" required />
       <input type="text" name="email" id="email" placholder="Enter email" required />
-      <button type="submit">Add</button>
+      <button id="add-color-button">Add</button>
     </div>
 </body>
 </html>
