--- a/profile.html
+++ b/profile.html
@@ -12,7 +12,7 @@
       <input type="text" name="firstName" id="firstName" placeholder="Enter first name." required/>
       <input type="text" name="lastName" id="lastName" placeholder="Enter last name." required />
       <input type="text" name="phoneNumber" id="phoneNumber" placeholder="Enter phone number" required />
-      <input type="text" name="email" id="email" placholder="Enter email" required />
+      <input type="text" name="email" id="email" placeholder="Enter email" required />
       <button id="add-color-button">Add</button>
     </div>
 </body>
