Fixing adding contact.

--- a/profile.html
+++ b/profile.html
@@ -15,5 +15,7 @@
       <input type="text" name="email" id="email" placeholder="Enter email" required />
       <button id="add-color-button">Add</button>
     </div>
+
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
