--- a/register.html
+++ b/register.html
@@ -101,6 +101,16 @@
 
                         <form id="registerForm" class="auth-form" novalidate>
                             <div class="field">
+                                <input id="first_name" name="first name" type="text"
+                                       class="glass-input" placeholder="first name" required autocomplete="name">
+                            </div>
+
+                            <div class="field">
+                                <input id="last_name" name="last name" type="text"
+                                       class="glass-input" placeholder="last name" required autocomplete="name">
+                            </div>
+
+                            <div class="field">
                                 <input id="username" name="username" type="text"
                                        class="glass-input" placeholder="Username" required autocomplete="username">
                             </div>
