--- a/register.html
+++ b/register.html
@@ -101,12 +101,12 @@
 
                         <form id="registerForm" class="auth-form" novalidate>
                             <div class="field">
-                                <input id="first_name" name="first name" type="text"
+                                <input id="first_name" name="first_name" type="text"
                                        class="glass-input" placeholder="first name" required autocomplete="name">
                             </div>
 
                             <div class="field">
-                                <input id="last_name" name="last name" type="text"
+                                <input id="last_name" name="last_name" type="text"
                                        class="glass-input" placeholder="last name" required autocomplete="name">
                             </div>
 
