--- a/register.html
+++ b/register.html
@@ -203,7 +203,7 @@
             window.showToast && window.showToast('Registering…','success');
 
 
-            const res = await fetch('/api/register.php', {
+            const res = await fetch('contact_manager/api/register.php', {
                 method:'POST',
                 headers: {'Content-Type':'application/json'},
                 body: JSON.stringify({ username: u.value.trim(), password: p.value }),
