--- a/register.html
+++ b/register.html
@@ -203,10 +203,10 @@
             window.showToast && window.showToast('Registering…','success');
 
 
-            const res = await fetch('contact_manager/api/register.php', {
+            const res = await fetch('/api/register.php', {
                 method:'POST',
                 headers: {'Content-Type':'application/json'},
-                body: JSON.stringify({ username: u.value.trim(), password: p.value }),
+                body: JSON.stringify({ first_name: f.value.trim() , last_name: l.value.trim() , username: u.value.trim(), password: p.value }),
                 credentials: 'same-origin'
             });
 
